<resources>
    <string name="app_name">StudNET</string>

    <string name="messenger">Messenger</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="main_menu">Main menu</string>
    <string name="lesson_name">Lesson name</string>
    <string name="auditoryNumber">Auditory number</string>
    <string name="start_time">Start time</string>
    <string name="break_duration">Break duration</string>
    <string name="save">Save</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>

    <string name="auditory_blank">auditoryNumber?</string>
    <string name="lesson_name_blank">lesson name?</string>

    <string name="lesson">lesson</string>
    <string name="lesson_break">break</string>

    <string name="no_lesson">Lessons aren\'t begin or already finished.</string>
    <string name="no_data">Sorry you should either have stable network connection either be authorized before.</string>

    <string name="n_lesson">{LESSON_NUMBER} lesson</string>
    <string name="time_to_end">{TIME}\ntill end of {STATE}</string>
    <string name="short_state">There\'s {TIME} to end of {LESSON_NUMBER} {STATE}</string>

    <string name="copyright">Made by [CYBOR]=Muhametshin R.A.\nContains useful ideas from OxOTHIK=Kliminov I.N.</string>
    <string name="full_name">Full name</string>
    <string name="birth_date">Birth date</string>
    <string name="apply_year">Apply year</string>
    <string name="repeat_password">Repeat password</string>

</resources>
