<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/auth_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons_container"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/inputs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/full_name_et"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/full_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/birth_date_et"
                android:text="@string/birth_date" />

            <EditText
                android:id="@+id/birth_date_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/apply_year_et"
                android:text="@string/apply_year" />

            <EditText
                android:id="@+id/apply_year_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/user_name_et"
                android:tag="forSignIn"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/user_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:tag="forSignIn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/password_et"
                android:tag="forSignIn"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:tag="forSignIn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/repeat_password_et"
                android:text="@string/repeat_password" />

            <EditText
                android:id="@+id/repeat_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/auth_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:textAppearance="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/switch_mode_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textAppearance="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</RelativeLayout>