<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/lesson_duration_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardCornerRadius="0dp"
        app:contentPadding="@dimen/medium_margin"
        app:contentPaddingBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/lesson_duration_collapsed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="There are 5 mins to end of 1st lesson"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/lesson_duration_expanded_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/clock_size">

                <AnalogClock
                    android:layout_width="@dimen/clock_size"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:foreground="@color/primary_dark" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/glass">

                    <TextView
                        android:id="@+id/current_lesson_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|start"
                        android:text="Lesson 1\nongoing" />

                    <TextView
                        android:id="@+id/time_to_end_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:text="1:2:3.5\ntill end of lesson" />
                </FrameLayout>

            </FrameLayout>

            <ImageView
                android:id="@+id/top_panel_collapse_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/medium_margin"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingRight="@dimen/medium_margin"
                android:paddingTop="@dimen/medium_margin"
                android:src="@mipmap/up_icon" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:cardCornerRadius="0dp"
        app:contentPaddingBottom="@dimen/medium_margin"
        app:contentPaddingTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/buttons_panel_collapse_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/medium_margin"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingRight="@dimen/medium_margin"
                android:paddingTop="@dimen/medium_margin"
                android:src="@mipmap/down_icon" />


            <TextView
                android:id="@+id/buttons_collapsed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_menu"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/buttons_expanded_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/messenger_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_button_background"
                    android:text="@string/messenger" />

                <Button
                    android:id="@+id/schedule_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_button_background"
                    android:text="@string/schedule" />

                <Button
                    android:id="@+id/settings_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_button_background"
                    android:text="@string/settings" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>